add Realm and Save Matrix

--- a/jogoDoBicho/Info.plist
+++ b/jogoDoBicho/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Baloo-Regular.ttf</string>
+		<string>Baloo2-Regular.ttf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
